--- a/Cakes/export_presets.cfg
+++ b/Cakes/export_presets.cfg
@@ -216,14 +216,14 @@ script_encryption_key=""
 
 custom_template/debug=""
 custom_template/release=""
-application/app_store_team_id=""
+application/app_store_team_id="qweasd"
 application/provisioning_profile_uuid_debug=""
 application/code_sign_identity_debug="iPhone Developer"
 application/export_method_debug=1
 application/provisioning_profile_uuid_release=""
 application/code_sign_identity_release=""
-application/export_method_release=0
-application/name=""
+application/export_method_release=1
+application/name="No nome"
 application/info="Made with Godot Engine"
 application/identifier=""
 application/signature=""
@@ -266,3 +266,26 @@ portrait_launch_screens/ipad_1536x2048=""
 portrait_launch_screens/iphone_1242x2208=""
 architectures/armv7=false
 architectures/arm64=true
+
+[preset.2]
+
+name="HTML5"
+platform="HTML5"
+runnable=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="Moo/index.html"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=true
+html/custom_html_shell=""
+html/head_include=""
+custom_template/release=""
+custom_template/debug=""
